deploy: ae8a441e1d478a892391a63b0f8dfdf899bb5dcc

--- a/index.html
+++ b/index.html
@@ -1,20 +1,46 @@
-<!doctype html><html lang="en"><head><title># reveal-pon</title><meta name="description" content="# reveal-pon"><meta property="og:title" content="# reveal-pon"><meta property="og:description" content="# reveal-pon"><meta property="og:url" content="https://mikkame.github.io/slide-osscontributelt"><meta name="twitter:card" content="summary_large_image"><meta property="og:image" content="https://mikkame.github.io/slide-osscontributelt/preview.gif"></head><body class="reveal"><div class="slides"><section data-markdown data-separator="^\n---$"><script type="text/template"># reveal-pon
-
-reveal.js build system
-using GitHub eco systems.
+<!doctype html><html lang="en"><head><title># OSSコントリビュータのIssueの探し方</title><meta name="description" content="# OSSコントリビュータのIssueの探し方"><meta property="og:title" content="# OSSコントリビュータのIssueの探し方"><meta property="og:description" content="# OSSコントリビュータのIssueの探し方"><meta property="og:url" content="https://mikkame.github.io/slide-osscontributelt"><meta name="twitter:card" content="summary_large_image"><meta property="og:image" content="https://mikkame.github.io/slide-osscontributelt/preview.gif"></head><body class="reveal"><div class="slides"><section data-markdown data-separator="^\n---$"><script type="text/template"># OSSコントリビュータのIssueの探し方
+mikkam
 
 ---
 
-# Usage
+# 自己紹介
 
-1. Click **Use this template** on GitHub
-2. edit **src/slide.md**
-3. commit and push then run ci automatically.
-4. enable GitHub Pages (Settings &gt; GitHub Pages &gt; Source : select gh-pages)
-5. edit README.md(optional)
+- [ ] TODO
+
+# しょぼいOSSつくってます
+
+- [mikkame/laravel-allow-non-rfc-compliant-email-patch](https://github.com/mikkame/laravel-allow-non-rfc-compliant-email-patch) Laravelライブラリ (★10)
+- [mikkame/komado-san](https://github.com/mikkame/komado-san) Electoronアプリ　 (★20)
+- [mikkame/slide-osscontributelt](mikkame/slide-osscontributelt) このスライド (★して！)
+- [mikkame/lets-contribute](https://github.com/mikkame/lets-contribute) 後述 (★12)
+
+---
+
+# 自分でOSS作るのもいいけど・・・
 
 ---
 
 
-# Let&#39;s try!
+## 結構無風でつらい
+
+ふだんは・・・
+
+---
+
+# 色々な所でOSSコミッターしてます。
+- [effekseer/Effekseer](https://github.com/effekseer/Effekseer) RPGツクールのエフェクトエディタ
+- [codeforjapan/mapprint](https://github.com/codeforjapan/mapprint) 紙マップ(ウェブ地図を印刷向けに最適化)
+- [tokyo-metropolitan-gov/covid19](https://github.com/tokyo-metropolitan-gov/covid19) 東京都 新型コロナウイルス感染症対策サイト
+
+---
+
+# 共通している事項
+
+---
+
+# 日本語でやりとりできる！
+
+私がお手伝いさせていただいたOSSはほとんど日本語でやりとり可能です！
+これなら、英語わからん！でもなんとかなる！
+
 ></script></section></div><script src="main.js"></script></body></html>
