deploy: 9a0e2a9597aa6aed819c2f64041d3d0df2b07550

--- a/index.html
+++ b/index.html
@@ -41,8 +41,46 @@ mikkam
 ---
 
 # 日本語でやりとりできる！
-
+&lt;!--
 私がお手伝いさせていただいたOSSはほとんど日本語でやりとり可能です！
 これなら、英語わからん！でもなんとかなる！
+--&gt;
+
+# Let&#39;s Contributeの紹介
+
+---
+
+# Issue/PRまってます！
+
+---
+
+# 話はかわるけど
+
+---
+
+# 実はこのスライドもOSS
+
+---
+
+# [mikkame/reveal-pon](https://github.com/mikkame/reveal-pon)
+
+- GitHub Template Repository
+- GitHub Actions
+- GitHub Pages
+
+---
+
+# GitHubのエコシステムに乗ろう！
+
+覚えると仕事でもOSSでも便利！
+
+---
+
+&lt;!-- 時間があまったら↓ --&gt;
+# OSSするといい事
+
+&lt;!--
+Findy/Laprasのスコアがあがる！etc
+--&gt;
 
 ></script></section></div><script src="main.js"></script></body></html>
