deploy: c44a5b8da66a2783e0cbdbf4c29ef4a6b406ef68

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html><html lang="en"><head><title># OSSコントリビュータのIssueの探し方</title><meta name="description" content="# OSSコントリビュータのIssueの探し方"><meta property="og:title" content="# OSSコントリビュータのIssueの探し方"><meta property="og:description" content="# OSSコントリビュータのIssueの探し方"><meta property="og:url" content="https://mikkame.github.io/slide-osscontributelt"><meta name="twitter:card" content="summary_large_image"><meta property="og:image" content="https://mikkame.github.io/slide-osscontributelt/preview.gif"></head><body class="reveal"><div class="slides"><section data-markdown data-separator="^\n---$"><script type="text/template"># OSSコントリビュータのIssueの探し方
-mikkam
+mikkae
 
 ---
 
 # 自己紹介
 
-- [ ] TODO
+- mikkame(みっかめ)です！
+- 兼業フリーランスをしています。
+- 喋るのが下手です。どもったらごめんなさい
 
 ---
 
@@ -41,14 +43,29 @@ mikkam
 ---
 
 # 日本語でやりとりできる！
-&lt;!--
-私がお手伝いさせていただいたOSSはほとんど日本語でやりとり可能です！
-これなら、英語わからん！でもなんとかなる！
---&gt;
+
 
 # Let&#39;s Contributeの紹介
 
+![スクリーンショット 2021-02-01 19 33 37](https://user-images.githubusercontent.com/13947046/106447106-712bde00-64c4-11eb-9425-3fe0d77ec675.png)
+
 ---
+
+# GitHub APIを駆使して日本語っぽいIssueを集めました
+
+---
+
+# 実装？
+
+---
+
+# [mikkame/lets-contribute](https://github.com/mikkame/lets-contribute)
+
+で見れるよ！
+
+---
+
+
 
 # Issue/PRまってます！
 
@@ -76,11 +93,8 @@ mikkam
 
 ---
 
-&lt;!-- 時間があまったら↓ --&gt;
-# OSSするといい事
+時間があまったら
 
-&lt;!--
-Findy/Laprasのスコアがあがる！etc
---&gt;
+# OSSするといい事を話そう
 
 ></script></section></div><script src="main.js"></script></body></html>
