deploy: 081edcaebfcd7a54a71dcf3390421fc4c7863ad9

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html lang="en"><head><title># OSSコントリビュータのIssueの探し方</title><meta name="description" content="# OSSコントリビュータのIssueの探し方"><meta property="og:title" content="# OSSコントリビュータのIssueの探し方"><meta property="og:description" content="# OSSコントリビュータのIssueの探し方"><meta property="og:url" content="https://mikkame.github.io/slide-osscontributelt"><meta name="twitter:card" content="summary_large_image"><meta property="og:image" content="https://mikkame.github.io/slide-osscontributelt/preview.gif"></head><body class="reveal"><div class="slides"><section data-markdown data-separator="^\n---$"><script type="text/template"># OSSコントリビュータのIssueの探し方
-mikkae
+mikkame
 
 ---
 
